--- a/env.example
+++ b/env.example
@@ -1,7 +1,7 @@
-VITE_FIREBASE_API_KEY=AIzaSyCmlbNCJGx5rwMv4D26-hGvlfdmAKJQm-0
+VITE_FIREBASE_API_KEY=YOUR_FIREBASE_API_KEY
 VITE_FIREBASE_AUTH_DOMAIN=aptify-82cd6.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=aptify-82cd6
-VITE_FIREBASE_STORAGE_BUCKET=aptify-82cd6.firebasestorage.app
-VITE_FIREBASE_MESSAGING_SENDER_ID=375881241889
-VITE_FIREBASE_APP_ID=1:375881241889:web:57c58411c47750ba039a60
+VITE_FIREBASE_STORAGE_BUCKET=aptify-82cd6.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=YOUR_MESSAGING_SENDER_ID
+VITE_FIREBASE_APP_ID=YOUR_APP_ID
 
