--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "start": "vite",
     "preview": "vite preview",
     "lint": "eslint src --fix",
-    "format": "prettier --write \"src/**/*.{js,jsx,css,md}\""
+    "format": "prettier --write \"src/**/*.{js,jsx,css,md}\"",
+    "type-check": "echo \"type-check skipped (no TypeScript configured)\""
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
