--- a/env.example
+++ b/env.example
@@ -5,3 +5,16 @@ VITE_FIREBASE_STORAGE_BUCKET=aptify-82cd6.appspot.com
 VITE_FIREBASE_MESSAGING_SENDER_ID=YOUR_MESSAGING_SENDER_ID
 VITE_FIREBASE_APP_ID=YOUR_APP_ID
 
+# Google Maps API Configuration
+# Get your API key from: https://console.cloud.google.com/google/maps-apis
+# Enable: Maps JavaScript API, Places API, Geocoding API
+# 
+# CRITICAL REQUIREMENTS:
+# - Variable name MUST be exactly: VITE_GOOGLE_MAPS_API_KEY (case-sensitive)
+# - File MUST be named .env.local (not .env)
+# - File MUST be in project root (same folder as package.json)
+# - MUST restart dev server after adding/changing this variable
+# - Replace 'YOUR_GOOGLE_MAPS_API_KEY' with your actual API key
+# 
+# Example: VITE_GOOGLE_MAPS_API_KEY=AIzaSyYourActualGoogleMapsAPIKeyHere
+VITE_GOOGLE_MAPS_API_KEY=YOUR_GOOGLE_MAPS_API_KEY
