--- a/env.example
+++ b/env.example
@@ -1,9 +1,9 @@
-VITE_FIREBASE_API_KEY=YOUR_FIREBASE_API_KEY
-VITE_FIREBASE_AUTH_DOMAIN=aptify-82cd6.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=aptify-82cd6
-VITE_FIREBASE_STORAGE_BUCKET=aptify-82cd6.appspot.com
-VITE_FIREBASE_MESSAGING_SENDER_ID=YOUR_MESSAGING_SENDER_ID
-VITE_FIREBASE_APP_ID=YOUR_APP_ID
+VITE_FIREBASE_API_KEY=
+VITE_FIREBASE_AUTH_DOMAIN=
+VITE_FIREBASE_PROJECT_ID=
+VITE_FIREBASE_STORAGE_BUCKET=
+VITE_FIREBASE_MESSAGING_SENDER_ID=
+VITE_FIREBASE_APP_ID=
 
 # Google Maps API Configuration
 # Get your API key from: https://console.cloud.google.com/google/maps-apis
