--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,10 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^12.0.0",
-    "firebase-functions": "^4.5.0"
+    "firebase-functions": "^4.5.0",
+    "nodemailer": "^6.9.7",
+    "resend": "^3.2.0",
+    "@sendgrid/mail": "^8.1.0"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
